@@ -6,6 +6,12 @@
 
                                   Changelog
 
+Daniel Stenberg (26 Jul 2009)
+- Bug report #2825989 (http://curl.haxx.se/bug/view.cgi?id=2825989) pointed
+  out that OpenSSL-powered libcurl didn't support the SHA-2 digest algorithm,
+  and provided the solution too: to use OpenSSL_add_all_algorithms() instead
+  of the older SSLeay_* alternative.
+
 Daniel Stenberg (23 Jul 2009)
 - Added CURLOPT_SSH_KNOWNHOSTS, CURLOPT_SSH_KEYFUNCTION, CURLOPT_SSH_KEYDATA.
   They introduce known_host support for SSH keys to libcurl. See docs for
